# Neural-Net-cpp

./: .gitignore  ANN.h  CMakeLists.txt  README.md  main.cpp
activation/: ActivationFunction.cpp  ActivationFunction.h  Linear.cpp  Linear.h  ReLU.cpp  ReLU.h  ReLu.cpp  ReLu.h  Sigmoid.cpp  Sigmoid.h  Tanh.cpp  Tanh.h
ann/: CompiledModel.cpp  CompiledModel.h  Layer.cpp  Layer.h  Model.cpp  Model.h
layer/: ActivationLayer.cpp  ActivationLayer.h  ConvolutionalLayer.cpp  ConvolutionalLayer.h  DropoutLayer.cpp  DropoutLayer.h  FlattenLayer.cpp  FlattenLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  Layer.cpp  Layer.h
loss/: LossFunction.cpp  LossFunction.h  MeanSquaredError.cpp  MeanSquaredError.h
matrix/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
network/: Network.cpp  Network.h
test/: ConvertMNIST.py  ConvertMNIST2TXT.py  LoadPlane.cpp  LoadPlane.h  LoadPolynomial.cpp  LoadPolynomial.h  PlotPlaneData.py  PlotPlaneMesh.py  SavePlaneMesh.cpp  SavePlaneMesh.h  TestCaseFile.cpp  TestCaseFile.h
utils/: LoadPolynomial.cpp  LoadPolynomial.h
